src/mssql-parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    sql: peg$parsesql,
  };
  let peg$startRuleFunction = peg$parsesql;

  const peg$c0 = "select";
  const peg$c1 = "from";
  const peg$c2 = ";";
  const peg$c3 = "insert";
  const peg$c4 = "into";
  const peg$c5 = "(";
  const peg$c6 = ")";
  const peg$c7 = "update";
  const peg$c8 = "set";
  const peg$c9 = ",";
  const peg$c10 = "=";
  const peg$c11 = "values";
  const peg$c12 = "NEWID()";
  const peg$c13 = "as";
  const peg$c14 = ".";
  const peg$c15 = "*";
  const peg$c16 = "[";
  const peg$c17 = "].[";
  const peg$c18 = "]";
  const peg$c19 = "COUNT(";
  const peg$c20 = "inner";
  const peg$c21 = "left";
  const peg$c22 = "outer";
  const peg$c23 = "right";
  const peg$c24 = "join";
  const peg$c25 = "on";
  const peg$c26 = "where";
  const peg$c27 = "group";
  const peg$c28 = "by";
  const peg$c29 = "order";
  const peg$c30 = "output";
  const peg$c31 = "asc";
  const peg$c32 = "desc";
  const peg$c33 = "or";
  const peg$c34 = "and";
  const peg$c35 = "<>";
  const peg$c36 = "is";
  const peg$c37 = "not";
  const peg$c38 = "null";
  const peg$c39 = "offset";
  const peg$c40 = "rows";
  const peg$c41 = "fetch";
  const peg$c42 = "next";
  const peg$c43 = "only";
  const peg$c44 = "@";
  const peg$c45 = "'";

  const peg$r0 = /^[A-Za-z_]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^[^']/;
  const peg$r3 = /^[A-Za-z0-9_]/;
  const peg$r4 = /^[ \t\n]/;

  const peg$e0 = peg$literalExpectation("select", true);
  const peg$e1 = peg$literalExpectation("from", true);
  const peg$e2 = peg$literalExpectation(";", false);
  const peg$e3 = peg$literalExpectation("insert", true);
  const peg$e4 = peg$literalExpectation("into", true);
  const peg$e5 = peg$literalExpectation("(", false);
  const peg$e6 = peg$literalExpectation(")", false);
  const peg$e7 = peg$literalExpectation("update", true);
  const peg$e8 = peg$literalExpectation("set", true);
  const peg$e9 = peg$literalExpectation(",", false);
  const peg$e10 = peg$literalExpectation("=", false);
  const peg$e11 = peg$literalExpectation("values", true);
  const peg$e12 = peg$literalExpectation("NEWID()", false);
  const peg$e13 = peg$literalExpectation("as", true);
  const peg$e14 = peg$otherExpectation("column");
  const peg$e15 = peg$literalExpectation(".", false);
  const peg$e16 = peg$literalExpectation("*", false);
  const peg$e17 = peg$literalExpectation("[", false);
  const peg$e18 = peg$literalExpectation("].[", false);
  const peg$e19 = peg$literalExpectation("]", false);
  const peg$e20 = peg$literalExpectation("COUNT(", false);
  const peg$e21 = peg$literalExpectation("inner", true);
  const peg$e22 = peg$literalExpectation("left", true);
  const peg$e23 = peg$literalExpectation("outer", true);
  const peg$e24 = peg$literalExpectation("right", true);
  const peg$e25 = peg$literalExpectation("join", true);
  const peg$e26 = peg$literalExpectation("on", true);
  const peg$e27 = peg$literalExpectation("where", true);
  const peg$e28 = peg$literalExpectation("group", true);
  const peg$e29 = peg$literalExpectation("by", true);
  const peg$e30 = peg$literalExpectation("order", true);
  const peg$e31 = peg$literalExpectation("output", true);
  const peg$e32 = peg$literalExpectation("asc", true);
  const peg$e33 = peg$literalExpectation("desc", true);
  const peg$e34 = peg$literalExpectation("or", true);
  const peg$e35 = peg$literalExpectation("and", true);
  const peg$e36 = peg$literalExpectation("<>", false);
  const peg$e37 = peg$literalExpectation("is", true);
  const peg$e38 = peg$literalExpectation("not", true);
  const peg$e39 = peg$literalExpectation("null", true);
  const peg$e40 = peg$literalExpectation("offset", true);
  const peg$e41 = peg$literalExpectation("rows", true);
  const peg$e42 = peg$literalExpectation("fetch", true);
  const peg$e43 = peg$literalExpectation("next", true);
  const peg$e44 = peg$literalExpectation("only", true);
  const peg$e45 = peg$literalExpectation("@", false);
  const peg$e46 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e47 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e48 = peg$literalExpectation("'", false);
  const peg$e49 = peg$classExpectation(["'"], true, false, false);
  const peg$e50 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e51 = peg$otherExpectation("whitespace");
  const peg$e52 = peg$classExpectation([" ", "\t", "\n"], false, false, false);

  function peg$f0(st) {    return st  }
  function peg$f1(select, from, joins, where, groupBy, orderBy, offset, limit) {    return { kind: "select", select, from, joins, where, groupBy, orderBy, offset, limit }  }
  function peg$f2(target, columns, output, values) {    return { kind: "insert", target, columns: columns.map(c => ({ kind: "column", alias: null, name: c })), output, values }  }
  function peg$f3(target, set, output, where) {    return { kind: "update", target, set, output, where }  }
  function peg$f4(column) {    return column  }
  function peg$f5(assignment) {    return assignment  }
  function peg$f6(column, value) {    return { kind: "assignment", column, value }  }
  function peg$f7(value) {    return value  }
  function peg$f8(values) {    return { kind: "values", values }  }
  function peg$f9() {    return { kind: "function", name: "newid", args: [] }  }
  function peg$f10(source, alias) {    return { kind: "select-source", source, alias }  }
  function peg$f11(source) {    return { kind: "select-source", source, alias: null }  }
  function peg$f12(alias, column) {    return { kind: "column", alias, name: column }  }
  function peg$f13(column) {    return { kind: "column", alias: null, name: column }  }
  function peg$f14() {    return { kind: "literal", type: "wildcard" }  }
  function peg$f15(table, alias) {    return { kind: "table", db: table.db, table: table.table, alias }  }
  function peg$f16(db, table) {    return { kind: "table", db, table, alias: null }  }
  function peg$f17(column) {    return { kind: "function", name: "count", args: [column] }  }
  function peg$f18(column) {    return column  }
  function peg$f19() {    return "inner"  }
  function peg$f20() {    return "left outer"  }
  function peg$f21() {    return "right outer"  }
  function peg$f22(type, source, c) {    return c  }
  function peg$f23(type, source, condition) {    return { 
       kind: "join", 
       type: type ?? "inner", 
       source,
       condition
     }  }
  function peg$f24(c) {    return c  }
  function peg$f25(c) {    return c  }
  function peg$f26(c) {    return c  }
  function peg$f27(c) {    return c  }
  function peg$f28() {    return "asc"  }
  function peg$f29() {    return "desc"  }
  function peg$f30(c, d) {    return d  }
  function peg$f31(c, direction) {    return { kind: "order", column: c, direction: direction ?? "asc" }  }
  function peg$f32(head, tail) {
    return tail.reduce((acc, [, , , next]) => ({
      kind: "condition",
      type: "or",
      left: acc,
      right: next
    }), head);
  }
  function peg$f33(head, tail) {
    return tail.reduce((acc, [, , , next]) => ({
      kind: "condition",
      type: "and",
      left: acc,
      right: next
    }), head);
  }
  function peg$f34(c) {    return { kind: "condition-group", condition: c }  }
  function peg$f35(left, right) {    return { kind: "condition", left, right, type: "equality" }  }
  function peg$f36(left, right) {    return { kind: "condition", left, right, type: "inequality" }  }
  function peg$f37(left, not) {    return { kind: "condition", left, right: { kind: "literal", type: "null" }, type: not ? "inequality" : "equality" }  }
  function peg$f38(input) {    return { kind: "offset", rows: input }  }
  function peg$f39(input) {    return { kind: "limit", rows: input }  }
  function peg$f40(input) {    return { kind: "input", identifier: input }  }
  function peg$f41() {    return { kind: "literal", type: "null" }  }
  function peg$f42(n) {    return { kind: "literal", type: "number", value: parseInt(n) }  }
  function peg$f43(value) {    return { kind: "literal", type: "string", value }  }
  function peg$f44() {    return { kind: "identifier", name: text() }  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsesql() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseWS();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parseselect();
    if (s2 === peg$FAILED) {
      s2 = peg$parseinsert();
      if (s2 === peg$FAILED) {
        s2 = peg$parseupdate();
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseWS();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseselect() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 6);
    if (s1.toLowerCase() === peg$c0) {
      peg$currPos += (6);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseselection();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = input.substr(peg$currPos, 4);
            if (s5.toLowerCase() === peg$c1) {
              peg$currPos += (4);
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWS();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsetable_source();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsejoins();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  s9 = peg$parsewhere();
                  if (s9 === peg$FAILED) {
                    s9 = null;
                  }
                  s10 = peg$parsegroup();
                  if (s10 === peg$FAILED) {
                    s10 = null;
                  }
                  s11 = peg$parseorder();
                  if (s11 === peg$FAILED) {
                    s11 = null;
                  }
                  s12 = peg$parseoffset();
                  if (s12 === peg$FAILED) {
                    s12 = null;
                  }
                  s13 = peg$parselimit();
                  if (s13 === peg$FAILED) {
                    s13 = null;
                  }
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s14 = peg$c2;
                    peg$currPos++;
                  } else {
                    s14 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  if (s14 === peg$FAILED) {
                    s14 = null;
                  }
                  peg$savedPos = s0;
                  s0 = peg$f1(s3, s7, s8, s9, s10, s11, s12, s13);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinsert() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 6);
    if (s1.toLowerCase() === peg$c3) {
      peg$currPos += (6);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = input.substr(peg$currPos, 4);
        if (s3.toLowerCase() === peg$c4) {
          peg$currPos += (4);
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsetable_name();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWS();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 40) {
                  s7 = peg$c5;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e5); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseinsert_columns();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseWS();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s10 = peg$c6;
                      peg$currPos++;
                    } else {
                      s10 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e6); }
                    }
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parseoutput();
                      if (s11 === peg$FAILED) {
                        s11 = null;
                      }
                      s12 = peg$parsevalues();
                      if (s12 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 59) {
                          s13 = peg$c2;
                          peg$currPos++;
                        } else {
                          s13 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e2); }
                        }
                        if (s13 === peg$FAILED) {
                          s13 = null;
                        }
                        peg$savedPos = s0;
                        s0 = peg$f2(s5, s8, s11, s12);
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseupdate() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 6);
    if (s1.toLowerCase() === peg$c7) {
      peg$currPos += (6);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetable_name();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = input.substr(peg$currPos, 3);
            if (s5.toLowerCase() === peg$c8) {
              peg$currPos += (3);
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e8); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWS();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseset_columns();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseoutput();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  s9 = peg$parsewhere();
                  if (s9 === peg$FAILED) {
                    s9 = null;
                  }
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s10 = peg$c2;
                    peg$currPos++;
                  } else {
                    s10 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  if (s10 === peg$FAILED) {
                    s10 = null;
                  }
                  peg$savedPos = s0;
                  s0 = peg$f3(s3, s7, s8, s9);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinsert_columns() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseWS();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = peg$parseidentifier();
    if (s4 !== peg$FAILED) {
      peg$savedPos = s2;
      s2 = peg$f4(s4);
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s4 = peg$c9;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e9); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseWS();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseWS();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parseidentifier();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f4(s5);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$FAILED;
        } else {
          s2 = s3;
        }
      } else {
        s2 = s3;
      }
    }
    if (s1.length < 1) {
      peg$currPos = s0;
      s0 = peg$FAILED;
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseset_columns() {
    let s0, s1, s2, s3, s4, s5;
